# bearbeiten

./: .gitignore  CMakeLists.txt  PERFORMANCE.md  README.md  resources.qrc
.claude/: settings.local.json
languages/: cpp.json  html.json  javascript.json  markdown.json  php.json  plaintext.json  python.json  rust.json
src/: breadcrumbbar.cpp  breadcrumbbar.h  characterinspector.cpp  characterinspector.h  codeeditor.cpp  codeeditor.h  commandpalette.cpp  commandpalette.h  encodingmanager.cpp  encodingmanager.h  finddialog.cpp  finddialog.h  findinfilesdialog.cpp  findinfilesdialog.h  gotolinedialog.cpp  gotolinedialog.h  jsonsyntaxhighlighter.cpp  jsonsyntaxhighlighter.h  languageloader.cpp  languageloader.h  main.cpp  mainwindow.cpp  mainwindow.h  minimap.cpp  minimap.h  outlinepanel.cpp  outlinepanel.h  projectpanel.cpp  projectpanel.h  stylesheet-dark.qss  stylesheet.qss  symbolextractor.cpp  symbolextractor.h  symbolsearchdialog.cpp  symbolsearchdialog.h  syntaxhighlighter.cpp  syntaxhighlighter.h
translations/: bearbeiten_de.ts  bearbeiten_fr.ts  eddy_zh.ts
